# cuda_practice

./: .clang-format  CMakeLists.txt  README.md
0_cuda_programming_study/: cs_kernel_transfer.cu  cuda_stream.cu  managed_memory.cu  practice_6_4.cu  recude_cpu.cu  reduce_gpu.cu  test.cu  transpose.cu
1_cuda_reduce_study/: CMakeLists.txt  my_reduce_v0_global_memory.cu  reduce.cu
2_cuda_sgemm_study/: CMakeLists.txt  sgemm.cu
3_flash_attention_study/: CMakeLists.txt  my-flash  my-flash.cpp  my-flash.cu
4_tensor_core_study/: README.md
4_tensor_core_wmma_study/: CMakeLists.txt  README.md  hgemm_v1_wmma_m16n16k16_native_kernel.cu  hgemm_v2_wmma_m16n16k16_mma4x2_kernel.cu  hgemm_v3_wmma_m16n16k16_mma4x2_warp2x4_kernel.cu  hgemm_v4_wmma_m16n16k16_mma4x2_warp2x4_dbuf_async_kernel.cu
5_mma_and_swizzle_study/: hgemm_v2_mma_m16n8k16_mma2x4_warp4x4_kernel.cu  hgemm_v3_mm1_m16n8k16_mma2x4_warp4x4_swizzle_kernel.cu
5_mma_ans_swizzle/: hgemm_v1_mma_m16n8k16_naive_kernel.cu
5_mma_ans_swizzle/common/: tester.h
6_cutlass_study/: CMakeLists.txt  v1_basic_gemm.cu  v2_turing_tensorop_gemm.cu
6_cutlass_study/common/: ptx.h
include/: error.cuh
